[FIX] Fixed overflow of content on statusbar

--- a/app/modules/main/StatusBar/StatusBar.m.scss
+++ b/app/modules/main/StatusBar/StatusBar.m.scss
@@ -4,6 +4,8 @@
   font-size: 12px;
   display: flex;
   align-items: center;
+  position: relative;
+  z-index: 2;
 
   &__side {
     width: 50%;
